fix pagination on iphone 5

--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -74,4 +74,10 @@
             margin: 5px;
         }
     }
+
+    .pagination {
+        li {
+            margin: 0 4px;
+        }
+    }
 }
